# esp-sub-master

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  TODO.md  sdkconfig.defaults
.github/workflows/: idf_build.yml
components/aht30/: CMakeLists.txt  Kconfig.projbuild  aht30_app.c  aht30_drv.c  aht30_intf.c
components/aht30/include/: aht30_app.h  aht30_intf.h
components/dshot/: CMakeLists.txt  Kconfig.projbuild  dshot.c
components/dshot/include/: dshot.h
components/jy901/: CMakeLists.txt  Kconfig.projbuild  jy901.c
components/jy901/include/: jy901.h
components/nanopb/: CMakeLists.txt
components/pb_unimsg/: CMakeLists.txt  navi_master.pb.c  pb_unimsg.c
components/pb_unimsg/include/: pb_unimsg.h
components/pca9685/: CMakeLists.txt  Kconfig.projbuild  pca9685_app.c  pca9685_app.h  pca9685_drv.c  pca9685_intf.c
components/pca9685/include/: pca9685_app.h  pca9685_intf.h
components/protobuf_rpc/: CMakeLists.txt  Kconfig.projbuild  message_cmd.c  navi_master.pb.c  pb_rpc.c
components/protobuf_rpc/include/: message_cmd.h  navi_master.pb.h  pb_rpc.h
components/sub_bus_init/: CMakeLists.txt  Kconfig.projbuild  sub_i2c.c  sub_intf_init.c  sub_spi.c
components/sub_interface_init/: CMakeLists.txt  Kconfig.projbuild  sub_i2c.c  sub_i2c.h  sub_intf_init.c
components/sub_interface_init/include/: sub_intf_init.h
components/wit_sdk/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  main.c  navi_master.pb.h  pb_com.c  pb_com.h  sub_intf_init.c  sub_intf_init.h  sub_rpc.c  sub_rpc.h  sub_rpc_func.c  sub_rpc_func.h
(+3 files in other folders)
